# crank

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: crank.yaml
examples/: demo_clusters.jsonl  training_dataset.jsonl
src/crank/: __init__.py  cli.py  config.py  logging_config.py  report.py  resources.py  snapshots.py  training.py  types.py
src/crank/collector/: __init__.py  base.py  fake.py  kubernetes.py  pagination.py
src/crank/data/: demo_clusters.jsonl
src/crank/features/: __init__.py  extractor.py
src/crank/keywords/: __init__.py  matcher.py
src/crank/model/: __init__.py  scorer.py
src/crank/scoring/: __init__.py  ranker.py
tests/: conftest.py  test_cli.py  test_collector.py  test_config.py  test_features.py  test_keywords.py  test_ranker.py  test_report.py  test_scorer.py  test_snapshots.py  test_training.py
