[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crank"
version = "0.1.0"
description = "ML-driven Kubernetes cluster rank and operator-attention scorer"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "crank contributors" }]
dependencies = [
    "kubernetes>=31.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
crank = "crank.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crank"]

[tool.hatch.build.targets.wheel.sources]
"src/crank" = "crank"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["crank"]
